implementing session with redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,13 @@
 version: '3.7'
 #Bloque de servicios, indica los contenedores a utilizar.
 services:
+  redis:
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
+    networks:
+      - my-network
+
   app-web:       #nombre del servicio
     image: enmanuelcruzdejesus/barcamp-app-docker #imagen utilizada.
     ports:          #puertos que estaran expuestos.
@@ -10,12 +17,14 @@ services:
       - spring.datasource.url=jdbc:mysql://base-datos-app-web:3306/Barcampdb
       - spring.datasource.username=root
       - spring.datasource.password=entrada01
+      - spring.redis.port=6379
     networks:    #red para conectar los equipos.
       - my-network
     volumes:
       - my-vol:/tmp/
     depends_on:   #indica que primero debe subir los servicios indicados.
       - base-datos-app-web
+      - redis
 
   base-datos-app-web:
     image: mysql:5.7.26
@@ -35,11 +44,13 @@ services:
     image: enmanuelcruzdejesus/barcamp-front
     container_name: angular
     ports:
-      - 4200:80
+      - 80:80
     depends_on:
       - app-web
     networks:
       - my-network
+
+
 
 
 
