--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,9 @@ spring.jpa.generate.dll=true
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/Barcampdb
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.session.store-type=jdbc
+spring.session.store.type=redis
+spring.session.host=localhost
+spring.redis.port=6379
+spring.redis.flush-mode=on_save
+spring.session.redis.namespace=spring.session
 
