--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port=8080
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Open2020
@@ -13,4 +13,6 @@ spring.session.host=localhost
 spring.redis.port=6379
 spring.redis.flush-mode=on_save
 spring.session.redis.namespace=spring.session
+spring.thymeleaf.enabled=true
+
 
