--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/Barcampdb
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.session.store.type=redis
-spring.session.host=localhost
+spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.flush-mode=on_save
 spring.session.redis.namespace=spring.session
